# PhishPicker

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml  ruff.toml
api/data/previews/: forward-sim-2026-04-21.json  forward-sim-2026-04-23-assign.json  forward-sim-2026-04-23-paced-0.4.json  forward-sim-2026-04-23-paced-0.5.json  forward-sim-2026-04-23-paced-0.6.json  forward-sim-2026-04-23-paced-0.8.json  forward-sim-2026-04-23-paced-1.0.json  forward-sim-2026-04-23.json  preview-2026-04-23.json
api/src/phishpicker/: app.py  cli.py  close_out.py  config.py  inclusion.py  ingest_cron.py  last_show.py  live.py  (+13 more)
api/tests/: conftest.py  test_app_startup.py  test_bustout_insert.py  test_cli_train.py  test_close_out.py  test_e2_encore.py  test_inclusion.py  test_ingest_cron.py  test_last_show_resolver.py  test_live.py  test_live_preview.py  test_live_sync_reconcile.py  test_nightly_smoke.py  test_phishnet_client_additions.py  test_poller.py  test_predict_determinism.py  test_predict_post.py  test_predict_virtual_played.py  test_preview_e2.py  test_push.py  test_replay.py  test_retro.py  test_schema_additions.py  test_score_capture.py  test_score_endpoint.py  test_score_freeze.py  test_score_state.py  test_scorecards.py  test_scoring_combo.py  test_scoring_e2e.py  test_scoring_foresight.py  test_scoring_live.py  test_scoring_service_versus.py  test_scoring_setlist.py  test_scoring_totals.py  test_slot_alternatives.py  test_slot_ranks.py  test_sync_concurrency.py  test_sync_endpoints.py  test_sync_show.py  (+3 more)
(+212 files in other folders)
