[project]
name = "phishpicker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.32",
    "lightgbm>=4.5,<5",
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.5,<2",
    "pywebpush>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
]

[project.scripts]
phishpicker = "phishpicker.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/phishpicker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
